Ajout de la section 1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Ohmyfood</title>
   </head>
 
@@ -20,5 +36,45 @@
       </div>
     </header>
     <!--End Header-->
+
+    <!--Start Main-->
+    <main>
+      <!--Start Section-->
+      <section>
+        <form>
+          <div class="location">
+            <i class="fas fa-map-marker-alt location__icone"></i>
+            <input
+              type="text"
+              class="location__text"
+              value="  Paris, Belleville"
+            />
+          </div>
+        </form>
+        <div class="booking">
+          <div class="booking__title">
+            <h1 class="booking__title--margin">
+              Réservez le menu qui vous convient
+            </h1>
+          </div>
+          <div class="booking__subtitle">
+            <p class="booking__subtitle--margin">
+              Découvrez des restaurants d'exception, séléctionnés par nos soins.
+            </p>
+          </div>
+        </div>
+
+        <form method="GET" action="#">
+          <div class="bookingButton">
+            <button type="submit" class="bookingButton__animation">
+              Explorer nos restaurants
+            </button>
+          </div>
+        </form>
+      </section>
+      <!--End Section-->
+      <p></p>
+    </main>
+    <!--End Main-->
   </body>
 </html>
