--- a/index.html
+++ b/index.html
@@ -73,7 +73,41 @@
         </form>
       </section>
       <!--End Section-->
-      <p></p>
+
+      <!--Start Section2-->
+      <section>
+        <div class="function">
+          <div class="function__title">
+            <h2>Fonctionnement</h2>
+          </div>
+          <div class="function__box">
+            <div class="function__buttons">
+              <div class="function__buttons--number">1</div>
+              <div class="function__buttons--icone">
+                <i class="fas fa-mobile-alt"></i>
+              </div>
+              <div class="function__buttons--title">
+                Choisissez un restaurant
+              </div>
+            </div>
+            <div class="function__buttons">
+              <div class="function__buttons--number">2</div>
+              <div class="function__buttons--icone">
+                <i class="fas fa-list-ul"></i>
+              </div>
+              <div class="function__buttons--title">Composez votre menu</div>
+            </div>
+            <div class="function__buttons">
+              <div class="function__buttons--number">3</div>
+              <div class="function__buttons--icone">
+                <i class="fas fa-store"></i>
+              </div>
+              <div class="function__buttons--title">Dégustez au restaurant</div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--End Section2-->
     </main>
     <!--End Main-->
   </body>
