--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header>
       <div class="header">
         <img
-          src="./images/logo/ohmyfood.png"
+          src="./images/logo/ohmyfood@2x.svg"
           alt="Logo ohmyfood"
           class="header__logo"
         />
@@ -47,7 +47,7 @@
             <input
               type="text"
               class="location__text"
-              value="  Paris, Belleville"
+              value="Paris, Belleville"
             />
           </div>
         </form>
@@ -108,6 +108,291 @@
         </div>
       </section>
       <!--End Section2-->
+
+      <!--Start Article-->
+      <article>
+        <div class="restaurants">
+          <div class="restaurants__title">
+            <h2>Restaurants</h2>
+          </div>
+          <section>
+            <div class="restaurants__cardsBox">
+              <a href="#">
+                <div class="restaurants__cardsBox__cards">
+                  <div class="restaurants__cardsBox__cards__img newBefore">
+                    <img
+                      src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                      alt="La palette du goût image"
+                      class="
+                        restaurants__cardsBox__cards__img--size
+                        restaurants__cardsBox__cards__img--position1
+                      "
+                    />
+                  </div>
+                  <div class="restaurants__cardsBox__cards__txtBox">
+                    <div class="restaurants__cardsBox__cards__txtBox--txt">
+                      <h3>La palette du goût</h3>
+                      <p>Ménilmontant</p>
+                    </div>
+                    <div class="restaurants__cardsBox__cards__txtBox--icone">
+                      <svg
+                        class="heart heart-full"
+                        viewBox="-20 0 550 550"
+                        xml:space="preserve"
+                      >
+                        <path
+                          d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268
+                                 c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
+                                 c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
+                                 s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
+                                 C512,93.417,453.532,30,376,30z"
+                        />
+                        <defs>
+                          <linearGradient
+                            id="text-fill"
+                            x1="8%"
+                            y1="0%"
+                            x2="0%"
+                            y2="99%"
+                          >
+                            <stop offset="0%" stop-color="#9356DC" />
+                            <stop offset="100%" stop-color="#FF79DA" />
+                          </linearGradient>
+                        </defs>
+                      </svg>
+
+                      <svg
+                        class="heart heart-empty"
+                        viewBox="-20 0 550 550"
+                        xml:space="preserve"
+                      >
+                        <path
+                          d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268
+                                 c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
+                                 c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
+                                 s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
+                                 C512,93.417,453.532,30,376,30z"
+                        />
+                        <defs>
+                          <linearGradient>
+                            <stop offset="0%" stop-color="#9356DC" />
+                            <stop offset="100%" stop-color="#FF79DA" />
+                          </linearGradient>
+                        </defs>
+                      </svg>
+                    </div>
+                  </div>
+                </div>
+              </a>
+
+              <a href="#">
+                <div class="restaurants__cardsBox__cards">
+                  <div class="restaurants__cardsBox__cards__img newBefore">
+                    <img
+                      src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                      alt="La note enchantée image"
+                      class="
+                        restaurants__cardsBox__cards__img--size
+                        restaurants__cardsBox__cards__img--position2
+                      "
+                    />
+                  </div>
+                  <div class="restaurants__cardsBox__cards__txtBox">
+                    <div class="restaurants__cardsBox__cards__txtBox--txt">
+                      <h3>La note enchantée</h3>
+                      <p>Charonne</p>
+                    </div>
+                    <div class="restaurants__cardsBox__cards__txtBox--icone">
+                      <svg
+                        class="heart heart-full"
+                        viewBox="-20 0 550 550"
+                        xml:space="preserve"
+                      >
+                        <path
+                          d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268
+                               c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
+                               c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
+                               s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
+                               C512,93.417,453.532,30,376,30z"
+                        />
+                        <defs>
+                          <linearGradient
+                            id="text-fill"
+                            x1="8%"
+                            y1="0%"
+                            x2="0%"
+                            y2="99%"
+                          >
+                            <stop offset="0%" stop-color="#9356DC" />
+                            <stop offset="100%" stop-color="#FF79DA" />
+                          </linearGradient>
+                        </defs>
+                      </svg>
+
+                      <svg
+                        class="heart heart-empty"
+                        viewBox="-20 0 550 550"
+                        xml:space="preserve"
+                      >
+                        <path
+                          d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268
+                               c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
+                               c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
+                               s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
+                               C512,93.417,453.532,30,376,30z"
+                        />
+                        <defs>
+                          <linearGradient>
+                            <stop offset="0%" stop-color="#9356DC" />
+                            <stop offset="100%" stop-color="#FF79DA" />
+                          </linearGradient>
+                        </defs>
+                      </svg>
+                    </div>
+                  </div>
+                </div>
+              </a>
+
+              <a href="#">
+                <div class="restaurants__cardsBox__cards">
+                  <div class="restaurants__cardsBox__cards__img">
+                    <img
+                      src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                      alt="À la française image"
+                      class="
+                        restaurants__cardsBox__cards__img--size
+                        restaurants__cardsBox__cards__img--position3
+                      "
+                    />
+                  </div>
+                  <div class="restaurants__cardsBox__cards__txtBox">
+                    <div class="restaurants__cardsBox__cards__txtBox--txt">
+                      <h3>À la française</h3>
+                      <p>Cité Rouge</p>
+                    </div>
+                    <div class="restaurants__cardsBox__cards__txtBox--icone">
+                      <svg
+                        class="heart heart-full"
+                        viewBox="-20 0 550 550"
+                        xml:space="preserve"
+                      >
+                        <path
+                          d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268
+                               c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
+                               c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
+                               s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
+                               C512,93.417,453.532,30,376,30z"
+                        />
+                        <defs>
+                          <linearGradient
+                            id="text-fill"
+                            x1="8%"
+                            y1="0%"
+                            x2="0%"
+                            y2="99%"
+                          >
+                            <stop offset="0%" stop-color="#9356DC" />
+                            <stop offset="100%" stop-color="#FF79DA" />
+                          </linearGradient>
+                        </defs>
+                      </svg>
+
+                      <svg
+                        class="heart heart-empty"
+                        viewBox="-20 0 550 550"
+                        xml:space="preserve"
+                      >
+                        <path
+                          d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268
+                               c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
+                               c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
+                               s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
+                               C512,93.417,453.532,30,376,30z"
+                        />
+                        <defs>
+                          <linearGradient>
+                            <stop offset="0%" stop-color="#9356DC" />
+                            <stop offset="100%" stop-color="#FF79DA" />
+                          </linearGradient>
+                        </defs>
+                      </svg>
+                    </div>
+                  </div>
+                </div>
+              </a>
+
+              <a href="#" class="aNone">
+                <div class="restaurants__cardsBox__cards">
+                  <div class="restaurants__cardsBox__cards__img">
+                    <img
+                      src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                      alt="Le délice des sens image"
+                      class="
+                        restaurants__cardsBox__cards__img--size
+                        restaurants__cardsBox__cards__img--position4
+                      "
+                    />
+                  </div>
+                  <div class="restaurants__cardsBox__cards__txtBox">
+                    <div class="restaurants__cardsBox__cards__txtBox--txt">
+                      <h3>Le délice des sens</h3>
+                      <p>Folie-Méricourt</p>
+                    </div>
+                    <div class="restaurants__cardsBox__cards__txtBox--icone">
+                      <svg
+                        class="heart heart-full"
+                        viewBox="-20 0 550 550"
+                        xml:space="preserve"
+                      >
+                        <path
+                          d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268
+                               c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
+                               c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
+                               s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
+                               C512,93.417,453.532,30,376,30z"
+                        />
+                        <defs>
+                          <linearGradient
+                            id="text-fill"
+                            x1="8%"
+                            y1="0%"
+                            x2="0%"
+                            y2="99%"
+                          >
+                            <stop offset="0%" stop-color="#9356DC" />
+                            <stop offset="100%" stop-color="#FF79DA" />
+                          </linearGradient>
+                        </defs>
+                      </svg>
+
+                      <svg
+                        class="heart heart-empty"
+                        viewBox="-20 0 550 550"
+                        xml:space="preserve"
+                      >
+                        <path
+                          d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268
+                               c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
+                               c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
+                               s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
+                               C512,93.417,453.532,30,376,30z"
+                        />
+                        <defs>
+                          <linearGradient>
+                            <stop offset="0%" stop-color="#9356DC" />
+                            <stop offset="100%" stop-color="#FF79DA" />
+                          </linearGradient>
+                        </defs>
+                      </svg>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </section>
+        </div>
+      </article>
+      <!--End Article-->
     </main>
     <!--End Main-->
   </body>
