Ajout du Footer + Loader

--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
   </head>
 
   <body>
+    <!--Start Loader-->
+    <div class="loader">
+      <span class="loader__letter">o</span>
+      <span class="loader__letter">h</span>
+      <span class="loader__letter">m</span>
+      <span class="loader__letter">y</span>
+      <span class="loader__letter">f</span>
+      <span class="loader__letter">o</span>
+      <span class="loader__letter">o</span>
+      <span class="loader__letter">d</span>
+    </div>
+    <!--End Loader-->
+
     <!--Start Header-->
     <header>
       <div class="header">
@@ -395,5 +408,47 @@
       <!--End Article-->
     </main>
     <!--End Main-->
+
+    <!--Start Footer-->
+    <footer>
+      <div class="footer">
+        <div class="footer__logo">
+          <img
+            src="images/logo/ohmyfood@2x.svg"
+            alt="Logo"
+            class="footer__logo--colorSize"
+          />
+        </div>
+        <div class="footer__boxLink">
+          <div class="footer__boxLink__position">
+            <i class="fas fa-utensils footer__boxLink__position--icone"></i>
+            <a href="#" class="footer__boxLink__position--link"
+              >Proposer un restaurant</a
+            >
+          </div>
+          <div class="footer__boxLink__position">
+            <i
+              class="fas fa-hands-helping footer__boxLink__position--icone"
+            ></i>
+            <a href="#" class="footer__boxLink__position--link"
+              >Devenir partenaire</a
+            >
+          </div>
+          <div class="footer__boxLink__position">
+            <a href="#" class="footer__boxLink__position--link"
+              >Mentions légales</a
+            >
+          </div>
+          <div class="footer__boxLink__position">
+            <a
+              href="mailto:test@gmail.fr"
+              class="footer__boxLink__position--link"
+              >Contact</a
+            >
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!--End Footer-->
   </body>
 </html>
