--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Ohmyfood</title>
+    <title>Acceuil - Ohmyfood</title>
   </head>
 
   <body>
@@ -128,9 +128,10 @@
           <div class="restaurants__title">
             <h2>Restaurants</h2>
           </div>
+          <!--Start Section 3-->
           <section>
             <div class="restaurants__cardsBox">
-              <a href="#">
+              <a href="laPaletteDuGout.html">
                 <div class="restaurants__cardsBox__cards">
                   <div class="restaurants__cardsBox__cards__img newBefore">
                     <img
@@ -198,7 +199,7 @@
                 </div>
               </a>
 
-              <a href="#">
+              <a href="laNoteEnchantee.html">
                 <div class="restaurants__cardsBox__cards">
                   <div class="restaurants__cardsBox__cards__img newBefore">
                     <img
@@ -266,7 +267,7 @@
                 </div>
               </a>
 
-              <a href="#">
+              <a href="aLaFrancaise.html">
                 <div class="restaurants__cardsBox__cards">
                   <div class="restaurants__cardsBox__cards__img">
                     <img
@@ -334,7 +335,7 @@
                 </div>
               </a>
 
-              <a href="#" class="aNone">
+              <a href="leDeliceDesSens.html" class="aNone">
                 <div class="restaurants__cardsBox__cards">
                   <div class="restaurants__cardsBox__cards__img">
                     <img
@@ -403,6 +404,7 @@
               </a>
             </div>
           </section>
+          <!--End Section 3-->
         </div>
       </article>
       <!--End Article-->
