--- a/index.html
+++ b/index.html
@@ -230,13 +230,7 @@
                                C512,93.417,453.532,30,376,30z"
                         />
                         <defs>
-                          <linearGradient
-                            id="text-fill"
-                            x1="8%"
-                            y1="0%"
-                            x2="0%"
-                            y2="99%"
-                          >
+                          <linearGradient>
                             <stop offset="0%" stop-color="#9356DC" />
                             <stop offset="100%" stop-color="#FF79DA" />
                           </linearGradient>
@@ -298,13 +292,7 @@
                                C512,93.417,453.532,30,376,30z"
                         />
                         <defs>
-                          <linearGradient
-                            id="text-fill"
-                            x1="8%"
-                            y1="0%"
-                            x2="0%"
-                            y2="99%"
-                          >
+                          <linearGradient>
                             <stop offset="0%" stop-color="#9356DC" />
                             <stop offset="100%" stop-color="#FF79DA" />
                           </linearGradient>
@@ -366,13 +354,7 @@
                                C512,93.417,453.532,30,376,30z"
                         />
                         <defs>
-                          <linearGradient
-                            id="text-fill"
-                            x1="8%"
-                            y1="0%"
-                            x2="0%"
-                            y2="99%"
-                          >
+                          <linearGradient>
                             <stop offset="0%" stop-color="#9356DC" />
                             <stop offset="100%" stop-color="#FF79DA" />
                           </linearGradient>
