--- a/laPaletteDuGout.html
+++ b/laPaletteDuGout.html
@@ -381,7 +381,7 @@
           </div>
           <div class="footer__boxLink__position">
             <a
-              href="mailto:test@gmail.fr"
+              href="mailto:test@gmail.com"
               class="footer__boxLink__position--link"
               >Contact</a
             >
